--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/Splashscreen"
+            android:screenOrientation="portrait"
+            android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +24,8 @@
         <activity
             android:name=".LihatBab"
             android:label="@string/app_name" />
-        <activity android:name=".LihatPasal" />
-        <activity android:name=".LihatAyat"></activity>
+        <activity android:name=".LihatPasal" android:label="@string/pasal"/>
+        <activity android:name=".LihatAyat" android:label="@string/ayat"></activity>
     </application>
 
 </manifest>
